# metakeyai

./: .gitignore  AUDIO_SETUP.md  CROSS_PLATFORM_INTEGRATION.md  LICENSE  MICROPHONE_MIGRATION_TODO.md  README.md  WINDOWS_DEBUGGING.md  WINDOWS_TESTING_CHECKLIST.md  ctx.txt  forge.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  tmp.py  webpack.plugins.ts
.github/workflows/: FUNDING.yml  build.yml
resources/: setup-python-uv.js
resources/binaries/linux/: sox
resources/src/: audio-recorder.ts  config.ts  index.ts  python-daemon.ts  python-env-manager.ts  python-runner.ts  python-spells.ts
resources/src/python_scripts/: metakeyai_daemon.py
scripts/: CODE_ANALYZER_README.md  analyze-unused-code.js  analyze.sh  build-python.js  clean-build.js  create-release.js  setup-audio-binaries.js  setup-dev-audio.js  setup-python.js  setup-windows-python.js  test-windows-fixes.js  verify-windows-build.js
src/: audio-manager.ts  audio-player.ts  audio-recorder.ts  clipboard-history.ts  config.ts  design-system-demo.html  design-system-guide.md  first-run-manager.ts  first-run-setup.html  first-run-setup.js  first-run-setup.ts  index.html  index.ts  openai-api.ts  pastille.html  pastille.ts  python-daemon-api.ts  python-daemon.ts  python-env-manager.ts  python-runner.ts  python-setup-manager.ts  python-spells.ts  settings.html  settings.ts  shared-styles.css  shortcuts-manager.ts  spell-book.html  user-data-manager.ts  uv-manager.ts  visualizer.ts
src/python_scripts/: data_processor.py  metakeyai_daemon.py
src/python_scripts/spells/: echo.py  (+1 more)
